#89539: fixing another cosmetic bug in the download table: when we had "width: 100%", screenshot images could bleed into the table. plus, the more compact table looks better IMHO, anyway. ;)

--- a/release/project_release.css
+++ b/release/project_release.css
@@ -21,7 +21,6 @@
 * CSS for tables of releases
 */
 table.releases {
-  width: 100%;
   margin-top: .5em;
 }
 
